--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
 }
-body{
+body {
     background: lightgrey;
 }
 .cardheader{
@@ -11,6 +11,8 @@ body{
 }
 .card{
     height:2em;
+    background: lightgrey;
+    border: 0;
 }
 .card1 {
     height: 40em;
@@ -21,4 +23,20 @@ body{
     height: 40em;
     background: lightcyan;
     border: solid 0.4em black;
+}
+.btn {
+    margin-bottom: -60em;
+    margin-left: 10em;
+}
+.card-img-top1 {  
+    display: none; 
+}
+.card-img{
+    display: none;
+}
+.unhidden1 { 
+    display: block; 
+} 
+.unhidden2 {
+    display:block;
 }
